# OpenTurbo

./: .gitignore  CMakeLists.txt  LICENSE  PROBE_REPORT_LATEST.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
benchmarks/: llama31_shadow_benchmark.md
include/openturbo/: c_api.h  ggml_adapter.h  ggml_downstream.hpp  llama_bridge.h  llama_kv_shim.h
kernels/: c_api_smoke_test.cpp  encoder.cu  encoder_layout.cuh  encoder_reference.hpp  encoder_smoke_test.cu  fwht.cuh  openturbo_c_api.cu  openturbo_cuda_api.cuh  openturbo_ggml_adapter.cpp  openturbo_llama_bridge.cpp  openturbo_llama_kv_shim.cpp  scan.cu  scan_reference.hpp  scan_smoke_test.cu
patches/llama_cpp/: fattn_injection.patch  ggml_cuda_packed_score_path.patch  llama_hooks.patch  sidecar_core.patch
scripts/: bootstrap_llama_cpp_integration.bat  build_c_api_smoke_test.bat  build_scan_smoke_test.bat  build_smoke_test.bat  check_env.py  install_cuda_bindings.bat  run_llama_cpp_k_cache_probe.py  scaffold_llama_cpp_integration.py
src/openturbo/: __init__.py  _openturbo_cuda.pyi  _pybind_shim.cpp  cli.py  cuda_api.py  cuda_runtime.py  tensor_api.py
tests/: test_basic.py  test_cuda_api.py  test_integration_scripts.py  test_python_cuda_smoke.py  test_tensor_api.py
