[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openturbo"
version = "0.0.1"
description = "A Python package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
dependencies = []

[project.urls]
Homepage = "https://example.com"

[project.optional-dependencies]
bindings = ["pybind11>=2.12"]

[tool.setuptools.packages.find]
where = ["src"]
