[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "openturbo"
version = "0.0.1"
description = "A Python package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
dependencies = []

[project.urls]
Homepage = "https://example.com"

[project.optional-dependencies]
bindings = ["pybind11>=2.12"]

[tool.scikit-build]
wheel.packages = ["src/openturbo"]
cmake.build-type = "Release"
editable.mode = "redirect"

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "89"

[tool.pytest.ini_options]
testpaths = ["tests"]

